fixed css and added index

--- a/Fuego Tortilla Grill/Fuego Menu Web version.html
+++ b/Fuego Tortilla Grill/Fuego Menu Web version.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Visual Access Project</title>
         <meta name="description" content="">
-        <link rel="stylesheet" type="text/css" href="main_style.css" /></head>
+        <link rel="stylesheet" type="text/css" href="main_style2.css">
         <body>   
             <header id="banner">
                 <div class="container">
