rework of fuego

--- a/Fuego Tortilla Grill/Fuego Menu Web version.html
+++ b/Fuego Tortilla Grill/Fuego Menu Web version.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Visual Access Project</title>
         <meta name="description" content="">
-        <link rel="stylesheet" type="text/css" href="main_style2.css">
+        <link rel="stylesheet" type="text/css" href="/home/plomos/VAP/VAP/main_style.css">
         <body>   
             <header id="banner">
                 <div class="container">
@@ -32,14 +32,63 @@
             </header>
             <section id="main_content">
                 <div class="container">
-                    <h3>Visual Access Project</h3>
+                    <h3>Fuego Tortilla Grill Menu</h3>
                     <div class="main_content_text">
-                        <p>Welcome to the Visual Access Project. Here you will find menus for restaurants that have been put together in a format suitable for modern screen readers.</p>
-                        <p>If you want to learn more about the project check out our About page or go and have a look at the Menu List see what is available.</p>
-                        <br>
-                        <p>Don’t see your favorite place listed? Use our Contact page to send us a message about it so it can be added to the project.</p>
+                        <h1>Craft Tacos</h1>
+                        <h4>Breakfast</h4>
+                        <ul>
+                            <li>Bean & Cheese $1.49</li>
+                            <li>Bacon & Egg $2.39</li>
+                            <li>Chorizo & Egg $2.29</li>
+                            <li>Potato & Egg $2.29</li>
+                            <li>Sausage & Egg $2.29</li>
+                            <li>Carne Guisada $3.99</li>
+                        </ul>
+                        <h2>El Guapo $3.99</h2>
+                        <p>Pulled pork, eggs, grilled onions, frijoles, roasted poblano queso</p>
+                        <h2>Fuego Deluxe $4.29</h2>
+                        <p>Smoked bacon, eggs, frijoles, grilled onions, potato, poblano queso</p>
+                        <h2>Chicken and Waffles $4.79</h2>
+                        <p>Hand-breaded fried chicken, waffle, smoked bacon, eggs, maple syrup</p>
+                        <h4>Chicken</h4>
+                        <h2>El Presidente $5.89</h2>
+                        <p>Char-flamed chicken, smoked bacon, fried avacado, pico de gallo, jack cheese, chipotle ranch. Substitute with rotisserie chicken $6.49</p>
+                        <h2>Southern Comfort $5.79</h2>
+                        <p>Hand-breaded fried chicken, chipotle cream corn, potato, grilled onions, fresh country pepper gravy</p>
+                        <h2>Green Chile Mac & Cheese $5.79</h2>
+                        <p>Char-flamed chicken, fried avacado, mac & cheese, roasted hatch green chiles</p>
+                        <h2>Magic Mushroom $5.79</h2>
+                        <p>Char-flamed chicken, smoked bacon, hand-breaded fried mushrooms, chipotle cream corn, jack cheese, pico de gallo</p>
+                        <h2>Buffalo Bill $5.59</h2>
+                        <p>Hand-breaded fried chicken, smoked bacon, grilled onions, jack cheese, ranch, pico de gallo, Buffalo sauce</p>
+                        <h2>I-CHEE-WA-WA $5.49</h2>
+                        <p>Hand-breaded fried chicken, smoked bacon, roasted hatch green chiles, roasted poblano queso, fresh guacamole</p>
+                        <h2>Loco Pollo $5.29</h2>
+                        <p>Char-flamed chicken, smoked bacon, frijoles, roasted poblano queso. Substitute with rotisserie chicken $5.89</p>
+                        <h2>Rajas De Fuego $5.89</h2>
+                        <p>Char-flamed chicken, grilled mushrooms, peppers and onioms, jack cheese, guacamole, frijoles, pico de gallo</p>
+                        <h2>The Hippie $5.89</h2>
+                        <p>Char-flamed chicken, smoked bacon, chipotle cream corn, guacamole, jack cheese, served on a fresh, home-made corn tortilla</p>
+                        <h4>Vegetarian</h4>
+                        <h2>Veggie Monster AKA James Allen $4.09</h2>
+                        <p>Chipotle cream corn, grilled peppers and onions, guacamole, pico de gallo, jack cheese, served on a fresh, home-made corn tortilla</p>
+                        <h4>Beef</h4>
+                        <h2>Rock Star $5.99</h2>
+                        <p>Charbroiled 100% Certified Angus beef, chipotle cream corn, roasted hatch green chiles, sauteed mushrooms, jack cheese, fried avacado</p>
+                        <h2>Fuego Steak $5.79</h2>
+                        <p>Charbroiled 100% Certified Angus beef, chipotle cream corn, potato, pico de gallo, jack cheese</p>
+                        <h2>The King $5.99</h2>
+                        <p>Charbroiled 100% Certified Angus beef, fried avacado, roasted poblano queso, grilled onions, frijoles, pico de gallo</p>
+                        <h2>Good Golly Miss Holly $5.79</h2>
+                        <p>Smoked brisket, mac and cheese, jack cheese, cheddar cheese, Cheetos</p>
+                        <h2>Fuego A-GO-GO $5.89</h2>
+                        <p>Charbroiled 100% Certified Angus beef, smoked bacon, hand-breaded fried mushrooms, guacamole, roasted poblano queso</p>
+                        <h2>Dr Pepper Cowboy $5.89</h2>
+                        <p>Smoked brisket, grilled onions, Dr. Pepper BBQ sauce, chipotle cream corn, jack cheese</p>
+                        <h2>Classic Carne Guisada $5.79</h2>
+                        <p>Charbroiled 100% Certified Angus beef, spicy guisada gravy, fresh guacamole, jack cheese</p>
                     </div>
-                    <div class="copyright">All content is copyright Visual Access Project 2018-2022. Menu data freely available from restaurants</div>
+                    <div class="copyright">All content is copyright Visual Access Project 2018-2023. Menu data freely available from restaurants</div>
                 </div>
             </section>
             <footer id="footer">
