--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                     <br>
                     <p>Don’t see your favorite place listed? Use our Contact page to send us a message about it so it can be added to the project.</p>
                 </div>
-                <div class="copyright">All content is copyright Visual Access Project 2018-2022. Menu data freely available from restaurants</div>
+                <div class="copyright">All content is copyright Visual Access Project 2018-2023. Menu data freely available from restaurants</div>
             </div>
         </section>
         <footer id="footer">
             <div class="container">
                 <hr>
                 <h1>VISUAL ACCESS PROJECT</h1>
-                <div id="credit">Proudly powered by <a href="https://wordpress.org/" target="_blank"><u>Big Phil</u></a>.</div>
+                <div id="credit">Proudly powered by <a href="https://wordpress.org/" target="_blank"><u>Plomos</u></a>.</div>
             </div>
         </footer>
 
